# algemaploom-rs

./: .cmt  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  run.sh  run_test.sh  visualizer.py
algebra/: Cargo.toml
algebra/src/: algebra.rs  lib.rs
datacore/: Cargo.toml
dataio/: Cargo.toml
interpreter/: Cargo.toml  run_translator.sh
interpreter/resources/tests/: multiple_tm_join.ttl
interpreter/src/: lib.rs  main.rs  rmlalgebra.rs  test_util.rs
interpreter/src/extractors/: error.rs  functionmap_extractor.rs  graphmap_extractor.rs  io.rs  logicalsource_extractor.rs  logicaltarget_extractor.rs  mod.rs  objectmap_extractor.rs  pom_extractor.rs  predicatemap_extractor.rs  store.rs  subjectmap_extractor.rs  term_map_info_extractor.rs  triplesmap_extractor.rs  util.rs
interpreter/src/extractors/source/: csvw_source.rs  mod.rs
interpreter/src/model/: mod.rs  term.rs  term_map.rs
interpreter/src/rdf/: mod.rs
interpreter/src/rml_model/: join.rs  mod.rs  source_target.rs  term.rs  term_map.rs
mapping/: Cargo.toml
operator/: Cargo.toml  README.md  example1_mapping.puml
operator/src/: display.rs  formats.rs  lib.rs  plan.rs  test_util.rs  tuples.rs  value.rs
plangenerator/: Cargo.toml  plan_state.puml
plangenerator/src/: error.rs  lib.rs  plan.rs
resources/: multiple_objects.json  multiple_objects.ttl  multiple_predicates.json  multiple_predicates.ttl  multiple_tm.json  multiple_tm.ttl  multiple_tm_join.ttl  single_tm.json  single_tm.ttl
resources/multiple_objects/: mapping_tree.gv
resources/multiple_predicates/: mapping_tree.gv
resources/multiple_tm/: mapping_tree.gv
resources/single_tm/: mapping_tree.gv
rml-interpreter/: Cargo.toml  run_translator.sh
rml-interpreter/resources/tests/: error.ttl  sample_mapping.ttl
rml-interpreter/src/: lib.rs  test_util.rs
rml-interpreter/src/extractors/: functionmap_extractor.rs  graphmap_extractor.rs  logicalsource_extractor.rs  logicaltarget_extractor.rs  mod.rs  objectmap_extractor.rs  pom_extractor.rs  predicatemap_extractor.rs  subjectmap_extractor.rs  term_map_info_extractor.rs  triplesmap_extractor.rs  util.rs
rml-interpreter/src/extractors/source/: csvw_source.rs  mod.rs
rml-interpreter/src/rml_model/: join.rs  mod.rs  source_target.rs  term_map.rs
shexml-interpreter/: Cargo.toml  bnf.md  output.json  sample.shexml  test_parser.sh
shexml-interpreter/src/: errors.rs  lib.rs  token.rs  type.rs
shexml-interpreter/src/lexer/: mod.rs  tests.rs  token.rs
shexml-interpreter/src/parser/: mod.rs  tests.rs  type.rs
src/: lib.rs  logger.rs  main.rs
src/channels/: mod.rs
src/engine/: mod.rs  operator_executer.rs
src/functions/: constant.rs  iri.rs  literal.rs  mod.rs  reference.rs  template.rs  uriencode.rs
src/operators/: extend.rs  mod.rs  project.rs
src/operators/serializers/: mod.rs  rdf_serializer.rs
src/operators/sources/: mod.rs
src/operators/sources/file/: csv.rs  mod.rs
src/planner/: mod.rs
translator/: Cargo.toml
translator/resources/test/shexml/: CommentIteratorExpressionTest.shexml  ConditionalGenerationTest.shexml  DeepHierarchyJSONTest.shexml  ExternalFunctionsTest.shexml  FilmsAlt.shexml  FilmsMySQLTest.shexml  FilmsPostgresTest.shexml  FilmsRelativePathTest.shexml  JsonAndXmlEventsMapping.shexml  JsonAndXmlEventsMappingIteratorExpression.shexml  JsonAndXmlEventsMappingWithBlankPrefix.shexml  JsonAndXmlEventsMappingWithJoin.shexml  JsonAndXmlEventsMappingWithJoinIteratorExpression.shexml  MultipleElementIteratorExpressionWithCSVTest.shexml  sample.shexml  straight_csv.shexml
translator/resources/test/shexml/simple/: input.shexml
translator/resources/test/shexml/straight_csv/: film1.csv  film2.csv  input.shexml
translator/resources/test/shexml/unorganized/: CommentIteratorExpressionTest.shexml  CommentTest.shexml  ConditionalGenerationTest.shexml  DeepHierarchyJSONTest.shexml  DeepHierarchyXMLTest.shexml  ExternalFunctionsTest.shexml  FilmsAlt.shexml  FilmsExternalQueryMySQLTest.shexml  FilmsRelativePathTest.shexml  FilmsSparqlFileTest.shexml  FilmsSparqlTest.shexml  FilmsTestIteratorsWithMissingValues.shexml  FilmsWithNullsTest.shexml  GraphMultipleElementIteratorExpressionTest.shexml  JsonAndXmlEventsMapping.shexml  JsonAndXmlEventsMappingIteratorExpression.shexml  JsonAndXmlEventsMappingWithBNode.shexml  JsonAndXmlEventsMappingWithBlankPrefix.shexml  JsonAndXmlEventsMappingWithBlankPrefixIteratorExpression.shexml  JsonAndXmlEventsMappingWithExternalQuery.shexml  JsonAndXmlEventsMappingWithJoin.shexml  JsonAndXmlEventsMappingWithJoinIteratorExpression.shexml  MatcherIteratorExpressionTest.shexml  MatcherTest.shexml  MultipleElementIteratorExpressionTest.shexml  MultipleElementIteratorExpressionWithAutoIncrementWithStringsTest.shexml  MultipleElementIteratorExpressionWithCSVAndDBTest.shexml  MultipleElementIteratorExpressionWithCSVTest.shexml  MultipleElementTest.shexml
translator/src/: lib.rs  rmlalgebra.rs  test_macro.rs
translator/src/rmlalgebra/: mod.rs  types.rs  util.rs
translator/src/rmlalgebra/operators/: extend.rs  fragment.rs  mod.rs
translator/src/rmlalgebra/operators/serializer/: mod.rs  nquads.rs  ntriples.rs  util.rs
translator/src/shexml/: mod.rs  tests.rs  util.rs
translator/src/shexml/operators/: extend.rs  mod.rs  rename.rs  source.rs
translator/src/shexml/operators/extend/: mod.rs  term.rs
translator/src/shexml/tests/: mod.rs
vocab/: Cargo.toml
vocab/src/: comp.rs  csvw.rs  fnml.rs  fno.rs  formats.rs  lib.rs  query.rs  r2rml.rs  rdf.rs  rml.rs  rml_core.rs  rmlt.rs  void.rs  xsd.rs
