[package]
name = "meamer-rs"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 3

[workspace]
members = ["interpreter", "dataio", "operator", "vocab", "plangenerator"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
petgraph = "0.6.3"
regex = "1.8.4"
serde_json = "1.0.99"
thiserror = "1.0.44"
uuid = { version= "1.3.0", features=["v4"]}


[dependencies]
anyhow.workspace = true
lazy_static.workspace = true 
petgraph.workspace = true
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true

interpreter = {path = "./interpreter/"}
operator = {path = "./operator/"}

csv = "1.2.2"
clap = {version= "4.3.12", features=["derive"]}
tokio = {version= "1.29.1", features=["full"]}
urlencoding = "2.1.2"

