[package]
name = "meamer-rs"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 3

[workspace]
members = ["interpreter",  "operator", "vocab", "plangenerator", "translator"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
petgraph = "0.6.3"
regex = "1.8.4"
serde = {version="1.0.164", features= ["derive", "rc"]}
serde_json = "1.0.99"
thiserror = "1.0.44"
uuid = { version= "1.3.0", features=["v4"]}
clap = {version= "4.3.12", features=["derive"]}


[dependencies]
anyhow.workspace = true
lazy_static.workspace = true 
petgraph.workspace = true
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
clap.workspace = true

interpreter = {path = "./interpreter/"}
operator = {path = "./operator/"}
plangenerator = {path = "./plangenerator/"}
translator = {path = "./translator/"}

csv = "1.2.2"
tokio = {version= "1.29.1", features=["full"]}
urlencoding = "2.1.2"
walkdir = "2.4.0"
colored = "2.0.4"

