[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_api = "0.7.2"
sophia_inmem = "0.7.2"
sophia_turtle = "0.7.2"
vocab  = {path= "../vocab/"}
operator = {path= "../operator/"}
plangenerator = {path = "../plangenerator/"}

anyhow.workspace = true
uuid.workspace = true
regex.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
sophia_term = "0.7.2"
