[package]
name = "plangenerator"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
operator = {path="../operator/"}
anyhow.workspace = true
petgraph.workspace = true
serde_json.workspace = true
serde = {version="1.0.164", features= ["derive", "rc"]}
thiserror.workspace = true
